// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/presets/index getPreset gets linters 1`] = `
{
  "description": [
    "All lint-related packages.",
  ],
  "extends": [
    "packages:emberTemplateLint",
    "packages:eslint",
    "packages:stylelint",
    "packages:tslint",
  ],
  "matchPackageNames": [
    "remark-lint",
  ],
}
`;

exports[`config/presets/index getPreset handles 404 packages 1`] = `undefined`;

exports[`config/presets/index getPreset handles 404 packages 2`] = `undefined`;

exports[`config/presets/index getPreset handles 404 packages 3`] = `undefined`;

exports[`config/presets/index resolvePreset migrates automerge in presets 1`] = `
{
  "automergeType": "pr",
  "branchPrefix": "renovate/",
  "description": [
    "Prefix \`renovate/\` to all branch names.",
    "If Renovate detects semantic commits, it will use semantic commit type \`fix\` for dependencies and \`chore\` for all others.",
    "Require all status checks to pass before any automerging.",
    "Pin dependency versions for \`devDependencies\` and retain SemVer ranges for others.",
  ],
  "ignoreTests": false,
  "ignoreUnstable": true,
  "labels": [
    "dependencies",
  ],
  "lockFileMaintenance": {
    "automerge": true,
    "enabled": true,
    "schedule": [
      "before 8am on Monday",
    ],
  },
  "major": {
    "automerge": false,
  },
  "minor": {
    "automerge": true,
  },
  "packageRules": [
    {
      "matchPackagePatterns": [
        "*",
      ],
      "semanticCommitType": "chore",
    },
    {
      "matchDepTypes": [
        "dependencies",
        "require",
      ],
      "semanticCommitType": "fix",
    },
    {
      "matchDatasources": [
        "maven",
      ],
      "matchDepTypes": [
        "compile",
        "provided",
        "runtime",
        "system",
        "import",
        "parent",
      ],
      "semanticCommitType": "fix",
    },
    {
      "matchPackagePatterns": [
        "*",
      ],
      "rangeStrategy": "replace",
    },
    {
      "matchDepTypes": [
        "devDependencies",
      ],
      "rangeStrategy": "pin",
    },
    {
      "matchDepTypes": [
        "peerDependencies",
      ],
      "rangeStrategy": "widen",
    },
  ],
  "prCreation": "immediate",
  "rebaseWhen": "behind-base-branch",
  "respectLatest": true,
  "schedule": [
    "before 8am",
  ],
  "semanticCommits": "enabled",
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "timezone": "Asia/Taipei",
}
`;

exports[`config/presets/index resolvePreset resolves eslint 1`] = `
{
  "matchPackageNames": [
    "@types/eslint",
    "babel-eslint",
  ],
  "matchPackagePrefixes": [
    "@typescript-eslint/",
    "eslint",
  ],
}
`;

exports[`config/presets/index resolvePreset resolves linters 1`] = `
{
  "description": [
    "All lint-related packages.",
  ],
  "matchPackageNames": [
    "@types/eslint",
    "babel-eslint",
    "codelyzer",
    "remark-lint",
  ],
  "matchPackagePatterns": [
    "\\btslint\\b",
  ],
  "matchPackagePrefixes": [
    "ember-template-lint",
    "@typescript-eslint/",
    "eslint",
    "stylelint",
  ],
}
`;

exports[`config/presets/index resolvePreset resolves nested groups 1`] = `
{
  "description": [
    "Update lint packages automatically if tests pass.",
  ],
  "packageRules": [
    {
      "automerge": true,
      "description": [
        "All lint-related packages.",
      ],
      "matchPackageNames": [
        "@types/eslint",
        "babel-eslint",
        "codelyzer",
        "remark-lint",
      ],
      "matchPackagePatterns": [
        "\\btslint\\b",
      ],
      "matchPackagePrefixes": [
        "ember-template-lint",
        "@typescript-eslint/",
        "eslint",
        "stylelint",
      ],
    },
  ],
}
`;

exports[`config/presets/index resolvePreset resolves self-hosted presets without baseConfig 1`] = `
{
  "labels": [
    "self-hosted resolved",
  ],
}
`;
